--- a/hotel/index.html
+++ b/hotel/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css" />
-    <title>Hotel</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Hotel Gołębiewski</title>
 </head>
 <body>
     <div class="wrapper">
@@ -16,10 +15,10 @@
                 <div class="a0"></div>
                 <div class="a0"></div>
                 <div class="a0"></div>
-                <div class="a1 a0"><h1>Header</h1></div>
+                <div class="a1 a0"><img src="img/logo.png" alt="logo" /></div>
                 <div class="a0"></div>
                 <div class="a0"></div>
-                <div class="a2 a0"><h1><a href="#about"><i class="fa fa-chevron-circle-down"></i></a></h1></div>
+                <div class="a2 a0"><h1><a href="#about"><img src="img/down-arrow.svg" alt="arrow" /></a></h1></div>
                 <div class="a0"></div>
 
 
@@ -33,7 +32,7 @@
                 <a href="#gallery" class="col-sm-12 col-md-2">Galeria</a>
                 <a href="#offers" class="col-sm-12 col-md-2">Oferty</a>
                 <a href="#contact" class="col-sm-12 col-md-2">Kontakt</a>
-                <a href="javascript:void(0)" id="icon" onclick="show()"><i class="fa fa-bars" style="font-size:24px"></i></a>
+                <a href="javascript:void(0)" id="icon" onclick="show()"><img src="img/menu-bars.svg" alt="menu" /></a>
 
             </div>
         </div>
@@ -50,46 +49,52 @@
                     <div class="slideshow-container col-md-12">
                         <div class="slide col-md-5">
                             <img src="img/karpacz1.jpg" alt="1" />
-                            <div class="caption">text</div>
+                            <div class="caption">Hotel z góry</div>
                         </div>
                         <div class="slide col-md-5">
-                            <img src="img/karpacz.jpg" alt="2" />
-                            <div class="caption">text</div>
+                            <img src="img/karpacz2.jpg" alt="2" />
+                            <div class="caption">Hotel zimą</div>
                         </div>
                         <div class="slide col-md-5">
                             <img src="img/karpacz3.jpg" alt="3" />
-                            <div class="caption">text</div>
+                            <div class="caption">Basen</div>
                         </div>
                         <div class="slide col-md-5">
                             <img src="img/karpacz4.jpg" alt="4" />
-                            <div class="caption">text</div>
+                            <div class="caption">Lobby</div>
                         </div>
                         <div class="slide col-md-5">
-                            <img src="img/karpacz4.jpg" alt="5" />
-                            <div class="caption">text</div>
+                            <img src="img/karpacz5.jpg" alt="5" />
+                            <div class="caption">Sypialnie</div>
                         </div>
                         <div class="slide col-md-5">
-                            <img src="img/karpacz4.jpg" alt="6" />
-                            <div class="caption">text</div>
+                            <img src="img/karpacz6.jpeg" alt="6" />
+                            <div class="caption">Restauracja</div>
                         </div>
                     </div>
                 </div>
                 <div class="c1" id="offers">
                     <h1>Nasze Oferty.</h1>
                     <table>
-                        <tr>
-                            <td>1</td>
-                            <td>2</td>
+                        <tr class="z1">
+                            <td>Pokoje do wynajęcia</td>
+                            <td>Cena / 1os. / 1 doba</td>
                         </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>2</td>
+                        <tr class="z2">
+                            <td>Pokój dwuosobowy*</td>
+                            <td>530 PLN</td>
                         </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>2</td>
+                        <tr class="z1">
+                            <td>Pokój 3-5 osób*</td>
+                            <td>720 PLN</td>
+                        </tr>
+                        <tr class="z2">
+                            <td>Sala konferencyjna (1h)</td>
+                            <td>200 PLN</td>
                         </tr>
                     </table>
+                    <p>*Cena posiada wliczony pakiet all inclusive</p>
+
                 </div>
                 <div class ="c1 col-md-12" id="contact">
                     <h1>Napisz do nas!</h1>
@@ -108,13 +113,13 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="footer col-sm-12">Footer</div>
+            <div class="footer col-sm-12">Szymon Barczyk 2DT</div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.4.1.min.js" ></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js" ></script>
 <script>
     function show(){
         x = document.getElementById("nav");
